force-app/main/default/objects/b3d__Log_Entry__c/fields/b3d__Body__c.field-meta.xml
<CustomField>
    <fullName>b3d__Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>