force-app/main/default/objects/b3d__Log_Entry__c/fields/b3d__Package_Version__c.field-meta.xml
<CustomField>
    <fullName>b3d__Package_Version__c</fullName>
    <label>Package Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>