force-app/main/default/objects/b3d__Log_Entry__c/fields/b3d__Template__c.field-meta.xml
<CustomField>
    <fullName>b3d__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>b3d__Template__c</referenceTo>
    <relationshipLabel>Log Entries</relationshipLabel>
    <relationshipName>Log_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>