force-app/main/default/objects/b3d__Log_Entry__c/fields/b3d__Type__c.field-meta.xml
<CustomField>
    <fullName>b3d__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>