force-app/main/default/objects/b3d__Log_Entry__c/listViews/b3d__All.listView-meta.xml
<ListView>
    <fullName>b3d__All</fullName>
    <columns>NAME</columns>
    <columns>b3d__Template__c</columns>
    <columns>b3d__Body__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>